--- a/Medipation2/package.json
+++ b/Medipation2/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "@material/top-app-bar": "^11.0.0",
+    "material": "^0.4.3",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
